[package]
name = "codespan-reporting"
version = "0.1.3"
readme = "README.md"
license = "Apache-2.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
description = "Diagnostic reporting support for the codespan crate"
homepage = "https://github.com/brendanzab/codespan"
repository = "https://github.com/brendanzab/codespan"
documentation = "https://docs.rs/codespan-reporting"
exclude = ["assets/**"]

[dependencies]
codespan = { path = "../codespan", version = "0.1.1" }
termcolor = "0.3.6"
enumflags = "0.4.1"
enumflags_derive = "0.4.1"

[dev-dependencies]
structopt = "0.2.7"
unindent = "0.1.3"
term = "0.5.1"
runtime-fmt = "0.3.0"
pretty_assertions = { git = "https://github.com/Nemo157/rust-pretty-assertions", rev = "9332632" }
regex = "1.0.1"